✨ 404 페이지 리뉴얼

--- a/my-schedule/src/app/post/[id]/page.module.scss
+++ b/my-schedule/src/app/post/[id]/page.module.scss
@@ -25,12 +25,16 @@
     vertical-align:top;
 }
 
+.article .content{
+    padding:20px;
+}
+
 .article .img_box{
     width:50%;
     max-width:400px;
     margin:0 auto;
 }
 
-.article .content{
-    padding:20px;
+.article .txt_box{
+    margin-top:20px;
 }
