--- a/my-schedule/src/app/globals.css
+++ b/my-schedule/src/app/globals.css
@@ -25,3 +25,19 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.btn{
+  padding:10px;
+  border-radius:8px;
+  background:#dfa1a1;
+  font-weight:bold;
+  cursor:pointer;
+}
+
+.btn.blue{
+  background:#a99be7;
+}
+
+.btn.red{
+  background:#f38db7;
+}
