검색결과 탭 안에서도 작동 되게 수정, 검색 결과 없음, 게시물 없음 추가

--- a/my-schedule/src/app/page.module.css
+++ b/my-schedule/src/app/page.module.css
@@ -2,3 +2,10 @@
     padding:10px;
     text-align:right;
 }
+
+.no_data{
+    padding:20px 5px;
+    font-size:20px;
+    font-weight:bold;
+    text-align:center;
+}
