--- a/my-schedule/src/app/globals.css
+++ b/my-schedule/src/app/globals.css
@@ -71,6 +71,7 @@ body {
   position:absolute;
   left:0;
   top:unset;
+  transform:unset;
 }
 
 .pop_wrap .pop_header{
@@ -81,7 +82,7 @@ body {
 .pop_wrap .pop_content{
   overflow-y:auto;
   max-height:500px;
-  padding:10px;
+  padding:15px;
 }
 
 .pop_wrap .pop_content .tit{
