--- a/my-schedule/src/app/globals.css
+++ b/my-schedule/src/app/globals.css
@@ -102,6 +102,14 @@ body {
   padding:10px;
 }
 
+/* 토스트 팝업 */
+.toast_popup{
+  z-index:100;
+  position:fixed;
+  left:0;
+  top:0;
+}
+
 /* 가이드 */
 .guide_wrap{
   height:100vh;
