토스트 팝업 수정

--- a/my-schedule/src/app/globals.css
+++ b/my-schedule/src/app/globals.css
@@ -108,6 +108,16 @@ body {
   position:fixed;
   left:0;
   top:0;
+  display:flex;
+  align-items:center;
+  padding:5px 10px 5px 15px;
+  border-radius:10px;
+  background:#c0d1f3;
+}
+
+.toast_popup .btn{
+  padding:5px;
+  background:#c0d1f3;
 }
 
 /* 가이드 */
